ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  # annotations:
    # kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - hosts:
      - "start.example.com"
  rules:
    - host: "start.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
